Issue line height makes icon and text vertically aligned
The previous technique of applying line-height to the entire
element has the unintended consequence of the line-height being
1 for all the text in the modal which was not expected.

Use first-line hack and document.

Bug: T190469

--- a/resources/mobile.issues/issues.less
+++ b/resources/mobile.issues/issues.less
@@ -18,7 +18,6 @@
 		li {
 			border-bottom: solid 1px @grayLight;
 			.issue-notice {
-				line-height: 1;
 				padding: @smallIconSize @smallIconSize @smallIconSize 0;
 				.mw-ui-icon {
 					float: left;
@@ -38,6 +37,12 @@
 	}
 
 	.issue-details {
+		// align the first line to the top of the element
+		// but line-height should be normal for text that follows (T190469)
+		> :first-line {
+			line-height: 1;
+		}
+
 		// This should match the icon width for the overlay close icon
 		//  which is derived from these two variables:
 		padding-left: @iconSize + ( 2 * @iconGutterWidth );
